iOS: Don't override scene delegate for CarPlay scenes

Qt for iOS apps that want to support CarPlay provide their own CarPlay
scene delegate that takes care of setting up the CarPlay template. We
should not get in the way of that, so bail out if we detect a CarPlay
scene.

It would make sense to always bail out of we detect an existing scene
delegate, class, or storyboard, but for visionOS the default scene
delegate is SwiftUI.AppSceneDelegate, so this needs more research.

Fixes: QTBUG-136138
Pick-to: 6.8
Change-Id: Icedea0cbeafc1c04ea56d8a7fc63b070087a609a
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 449b277bbe0fa21cc6b1c230df02b0969fc15785)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 5d0faac9ab9f4f5baa72875766232d4d3e26633c)